<resources>
    <string name="app_name">Blind Date</string>
    <string name="card_image">Card Image</string>
    <string name="drawable_image">Drawable Image</string>
    <string name="log_in">Log in</string>
    <string name="join">Join</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_check">Password check</string>
    <string name="nickname">Nickname</string>
    <string name="gender">Gender(M/W)</string>
    <string name="area">Area</string>
    <string name="age">Age</string>
    <string name="sign_up">Sign up</string>
    <string name="my_page">MyPage</string>
    <string name="log_out">Log out</string>
    <string name="my_like_list">My Like List</string>
</resources>